--- a/spring-elastic-demo/src/main/resources/application.properties
+++ b/spring-elastic-demo/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+version.jooq = 3.13.1
 
+spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://localhost:5433/postgres?currentSchema=\"public\"
+
+spring.datasource.username = postgres
+spring.datasource.password = postgres123
+
+spring.jooq.sql-dialect = POSTGRES
