--- a/spring-elastic-demo/pom.xml
+++ b/spring-elastic-demo/pom.xml
@@ -29,6 +29,16 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
                 <dependency>
+                 <groupId>org.springframework.boot</groupId>
+                 <artifactId>spring-boot-starter-thymeleaf</artifactId>
+             </dependency>
+                <dependency>
+            <!-- jsoup HTML parser library @ https://jsoup.org/ -->
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.13.1</version>
+          </dependency>
+                <dependency>
                     <groupId>org.jooq</groupId>
                     <artifactId>jooq</artifactId>
                     <version>${version.jooq}</version>
